# Kbu-files

Data Com/datacom/: CMakeLists.txt  weather_client.c  weather_server.c
Data Com/datacommassignment/: CMakeLists.txt  weather_client.c  weather_server.c
OOP/DeckofCards/src/: Card.java  Deck.java  Main.java
OOP/bank system/src/: Main.java
OOP/oopLab10/src/: Circle.java  Cone.java  Cylinder.java  Main.java  Pyramid.java  Rectangle.java  Shape2D.java  Shape3D.java  Sphere.java  Square.java
OOP/oopLab11/src/: ArticleScoreBehaviour.java  BachelourStudent.java  ConforenceScoreBehaviour.java  MasterStudent.java  ProjectScoreBehaviour.java  Student.java
OOP/oopLab2/src/: Main.java  Worker.java
OOP/oopLab3.1/src/: Account.java  Main.java
OOP/oopLab5/src/: Branch.java  Circle.java  Main.java  Teacher.java
OOP/oopLab7/src/: Album.java  Main.java  Patient.java  Song.java
OOP/oopLab9/src/: Circle.java  Cylinder.java  Main.java  Point2D.java  Point3D.java
PD-I/Codes/: no_edge.c  perfect number.c  with_edge.c
PD-II/Codes/: area.c  crapsgame.c  exponential.c  recursive1.c
PD-II/odev/: main.c  patients_id.txt
PD-II/week-1/: area.c
Visual Programming/TodoListManager/: TodoListManager.sln
Visual Programming/TodoListManager/TodoListManager/: ChartPage.Designer.cs  ChartPage.cs  ChartPage.resx  LoginPage.Designer.cs  LoginPage.cs  LoginPage.resx  Program.cs  TaskPage.Designer.cs  TaskPage.cs  TaskPage.resx  TodoListManager.csproj  packages.config
Visual Programming/TodoListManager/TodoListManager/Properties/: AssemblyInfo.cs  Resources.Designer.cs  (+2 more)
